// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Facets Resolver should return as expected Reeturn all facets when rule satisfied 2`] = `
Object {
  "results": Object {
    "facets": Array [
      Object {
        "display": "ListFacet",
        "entries": Array [
          Object {
            "count": 3120,
            "label": "Movie",
          },
          Object {
            "count": 521,
            "label": "Episode",
          },
          Object {
            "count": 473,
            "label": "Series",
          },
          Object {
            "count": 48,
            "label": "Game",
          },
        ],
        "identifier": "type",
        "label": "Type",
        "type": "RefinementSelectFacet",
      },
      Object {
        "display": "override",
        "entries": Array [
          Object {
            "count": 83,
            "label": "J.J. Abrams",
          },
          Object {
            "count": 74,
            "label": "Jeffrey Lieber",
          },
          Object {
            "count": 73,
            "label": "Damon Lindelof",
          },
          Object {
            "count": 53,
            "label": "James Manos Jr.",
          },
          Object {
            "count": 53,
            "label": "Jeff Lindsay",
          },
        ],
        "identifier": "writers",
        "label": "Writers",
        "type": "RefinementSelectFacet",
      },
      Object {
        "display": "ListFacet",
        "entries": Array [
          Object {
            "count": 73,
            "label": "Naveen Andrews",
          },
          Object {
            "count": 56,
            "label": "Jennifer Carpenter",
          },
          Object {
            "count": 56,
            "label": "Michael C. Hall",
          },
          Object {
            "count": 53,
            "label": "Emilie de Ravin",
          },
          Object {
            "count": 42,
            "label": "Jared Padalecki",
          },
        ],
        "identifier": "actors",
        "label": "Actors",
        "type": "RefinementSelectFacet",
      },
      Object {
        "display": "ListFacet",
        "entries": Array [
          Object {
            "count": 2529,
            "label": "Drama",
          },
          Object {
            "count": 1274,
            "label": "Comedy",
          },
          Object {
            "count": 786,
            "label": "Crime",
          },
          Object {
            "count": 725,
            "label": "Action",
          },
          Object {
            "count": 666,
            "label": "Adventure",
          },
        ],
        "identifier": "genres",
        "label": "Genres",
        "type": "RefinementSelectFacet",
      },
    ],
    "hits": Object {
      "items": Array [
        Object {
          "id": "tt0468569",
        },
        Object {
          "id": "tt0110912",
        },
        Object {
          "id": "tt0167260",
        },
        Object {
          "id": "tt0114369",
        },
        Object {
          "id": "tt0073486",
        },
        Object {
          "id": "tt0172495",
        },
        Object {
          "id": "tt1520211",
        },
        Object {
          "id": "tt0338013",
        },
        Object {
          "id": "tt0078788",
        },
        Object {
          "id": "tt0180093",
        },
      ],
    },
    "summary": Object {
      "appliedFilters": Array [
        Object {
          "identifier": "type",
        },
      ],
      "disabledFilters": Array [],
    },
  },
}
`;

exports[`Facets Resolver should return as expected custom rule configuration 1`] = `
Object {
  "results": Object {
    "facets": Array [
      Object {
        "identifier": "type",
      },
      Object {
        "identifier": "writers",
      },
      Object {
        "identifier": "actors",
      },
      Object {
        "identifier": "genres",
      },
    ],
  },
}
`;

exports[`Facets Resolver should return as expected should not have the writers filter applied 2`] = `
Object {
  "results": Object {
    "facets": Array [
      Object {
        "entries": Array [
          Object {
            "label": "Movie",
          },
          Object {
            "label": "Episode",
          },
          Object {
            "label": "Series",
          },
          Object {
            "label": "Game",
          },
        ],
        "identifier": "type",
      },
    ],
    "hits": Object {
      "items": Array [
        Object {
          "id": "tt0468569",
        },
        Object {
          "id": "tt0110912",
        },
        Object {
          "id": "tt0167260",
        },
        Object {
          "id": "tt0114369",
        },
        Object {
          "id": "tt0073486",
        },
        Object {
          "id": "tt0172495",
        },
        Object {
          "id": "tt1520211",
        },
        Object {
          "id": "tt0338013",
        },
        Object {
          "id": "tt0078788",
        },
        Object {
          "id": "tt0180093",
        },
      ],
    },
    "summary": Object {
      "appliedFilters": Array [],
      "disabledFilters": Array [
        Object {
          "identifier": "writers",
        },
      ],
    },
  },
}
`;

exports[`Facets Resolver should return as expected should return correct Results 2`] = `
Object {
  "results": Object {
    "facets": Array [
      Object {
        "display": "ListFacet",
        "entries": Array [
          Object {
            "count": 3120,
            "label": "Movie",
          },
          Object {
            "count": 521,
            "label": "Episode",
          },
          Object {
            "count": 473,
            "label": "Series",
          },
          Object {
            "count": 48,
            "label": "Game",
          },
        ],
        "identifier": "type",
        "label": "Type",
        "type": "RefinementSelectFacet",
      },
    ],
    "hits": Object {
      "items": Array [
        Object {
          "id": "tt0468569",
        },
        Object {
          "id": "tt0110912",
        },
        Object {
          "id": "tt0167260",
        },
        Object {
          "id": "tt0114369",
        },
        Object {
          "id": "tt0073486",
        },
        Object {
          "id": "tt0172495",
        },
        Object {
          "id": "tt1520211",
        },
        Object {
          "id": "tt0338013",
        },
        Object {
          "id": "tt0078788",
        },
        Object {
          "id": "tt0180093",
        },
      ],
    },
    "summary": Object {
      "appliedFilters": Array [],
      "disabledFilters": Array [],
    },
  },
}
`;
